# flexible-label

./: .gitignore  Makefile  Pipfile  README.md  README_jp.md  flexiblelabel.py  fontsizeadjustmentbehavior.py  setup.cfg
doc/: about_get_extents.md
examples/: fail_when_the_font_size_is_extreamly_small.py  fail_when_using_markup.py  simple.py  with_splitter.py
fontsize_adjustment_behavior/: __init__.py
tests/: _before_test.py  _test_get_extents.py  _test_sticking_out.py  _visual_test.py  conftest.py  test_get_extents.py  test_get_extents_on_pil.py  test_get_extents_on_sdl2.py  test_sticking_out_on_pil.py  test_sticking_out_on_sdl2.py  test_texture_is_not_sticking_out_from_label.py  visual_test_on_sdl2.py
tests/visual_test/: texture_size_is_different_depending_on_markup_when_using_outline.py
