[metadata]
name = fontsize_adjustment_behavior
version = attr: fontsize_adjustment_behavior.__version__
url = https://github.com/gottadiveintopython/fontsize-adjustment-behavior
author = Gotta Dive Into Python
author_email = flow4re2c@gmail.com
license_file = LICENSE
classifier =
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7

[options]
packages = find:
